# LociGraph

./: .dockerignore  .env.example  .gitignore  Caddyfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.superpowers/sdd/: pagination-report.md
architecture/: 01_Vision.md  02_Domain_Model.md  07_Planetarium_Physics.md
architecture/adr/: ADR-001-Ontological-Concepts.md  ADR-002-Reality-Perception-Separation.md  ADR-003-Planetarium-Over-Graph-First.md  ADR-004-Concepts-Are-Created.md  ADR-005-Unresolved-Contradictions.md  ADR-006-Raw-Sources-Are-Purgeable.md
backend/: Dockerfile  __init__.py
backend/app/: __init__.py  config.py  main.py
docs/learning/: 2026-06-19-phase0-plan1-2-walkthrough.md
frontend/: .dockerignore  .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
frontend/design/: dashboard-hearth.html  dashboard-meridian.html  import-dark.html  import-teal.html  observations-darkteal.html  observations.html
implementation/: 01_Stack.md  02_Data_Model.md  03_AI_Architecture.md  04_Source_Lifecycle.md  05_Custodian_Logging.md  06_Roadmap.md
kernel/: __init__.py  concepts_promotion.py  custodian_logging.py  models.py  planetarium.py  planetarium_physics.py  planetarium_projection.py  storage.py
kernel/ai/: __init__.py  claim_extraction.py  contradiction_detection.py  custodian.py  embeddings.py  revision_synthesis.py
kernel/auth/: __init__.py  passwords.py
kernel/db/: __init__.py  base_repository.py  claim_concept_edges.py  claims.py  concept_candidates.py  concepts.py  contradictions.py  custodian.py  custodian_logged_items.py  dashboard.py  engine.py  fragments.py  importance_signals.py  jobs.py  notes.py  observations.py  planetary_nodes.py  revisions.py  semantic_vectors.py  session.py  sources.py  users.py
kernel/ingestion/: __init__.py  base.py  chatgpt_parser.py  html_parser.py  json_parser.py  markdown_parser.py  meta_parser.py  normalizer.py  pdf_parser.py  (+1 more)
migrations/: env.py
tests/: conftest.py  test_end_to_end.py  test_smoke.py
worker/: Dockerfile  __init__.py  broker.py  main.py
(+261 files in other folders)
