[project]
name = "locigraph"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.29,<0.30",
    "alembic>=1.13,<1.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<0.24",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.5,<0.6",
    "mypy>=1.10,<1.11",
]

[tool.setuptools.packages.find]
include = ["kernel*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=kernel --cov-report=term-missing"
testpaths = ["tests"]
