[project]
name = "locigraph"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.29,<0.30",
    "alembic>=1.13,<1.14",
    "beautifulsoup4>=4.12,<5.0",
    "pdfplumber>=0.11,<0.12",
    "mistune>=3.0,<4.0",
    "fastapi>=0.111,<0.112",
    "uvicorn[standard]>=0.30,<0.31",
    "dramatiq[redis]>=1.17,<1.18",
    "pyjwt>=2.8,<2.10",
    "bcrypt>=4.1,<5.0",
    "python-multipart>=0.0.9,<0.0.10",
    "openai>=2.0,<3.0",
    "umap-learn>=0.5,<0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<0.24",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.5,<0.6",
    "mypy>=1.10,<1.11",
    "fpdf2>=2.7,<3.0",
    "httpx>=0.27,<0.28",
]

[tool.setuptools.packages.find]
include = ["kernel*", "backend*", "worker*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
# importlib mode imports test modules by path without inserting their dirs on
# sys.path, so tests/kernel/ never shadows the real `kernel` package.
addopts = "--cov=kernel --cov=backend --cov=worker --cov-report=term-missing --import-mode=importlib"
testpaths = ["tests"]
pythonpath = ["."]
